# ROS2-RobotHoover-Simulation

./: README.md
coursework2/: package.xml  setup.cfg  setup.py
coursework2/launch/: sim_bringup.launch.py
coursework2/rviz/: view_robot.rviz
seaborgium_description/: package.xml  setup.cfg  setup.py
seaborgium_description/launch/: seaborgium_sim_bringup.launch.py
seaborgium_description/urdf/: seaborgium.xacro.urdf
