<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coursework2</name>
  <version>0.0.1</version>
  <description>Supporting package to the UoM MSc Robotics Software for Robotics coursework.</description>
  <maintainer email="andrew.west@manchester.ac.uk">Andy West</maintainer>
  <license>TODO: License declaration</license>

  <!-- This package is a convenient wrapper to launch
  Ignition Gazebo and RVIZ2 in a single launch file -->
  <depend>ros_gz_sim</depend>
  <depend>rviz2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
